--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ethers": "^6.8.1",
     "form-data": "^4.0.0",
     "web3subscriber": "git+https://github.com/DelphinusLab/delphinus-web3subscriber.git",
-    "zkwasm-service-helper": "git+https://github.com/DelphinusLab/zkWasm-service-helper.git"
+    "zkwasm-service-helper": "https://github.com/DelphinusLab/zkWasm-service-helper.git#yym/fix-instances-array"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
